--- a/public/stylesheets/sass/_layout.sass
+++ b/public/stylesheets/sass/_layout.sass
@@ -215,6 +215,28 @@ ol.normal
 
 // This is for the lists that are typically within the rows of the tables 
 
+ul.command_info
+  margin: 0
+  padding: 0
+  display: block
+  float: none
+  clear: both
+  overflow: none
+  li
+    display: block
+    float: none
+    clear: both
+    overflow: none
+    border-top: 1px solid #F0F0F0
+    div
+      padding: 6px 3px
+      &.key
+        float: left
+        color: #888
+      &.value
+        float: right
+        color: #555
+
 ul.options li
   display: inline
   float: left
