--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -1,39 +1,41 @@
 #primary
-  %h1
-    Public Queriac Commandline
+
+  -if false
+    %h1
+      Public Queriac Commandline
   
-  .description_box
-    - form_tag user_command_execute_path(User::PUBLIC_USER, 'search_form'), :method=>:get do
-      = link_to_function 'Some Tips', "$('commandline_tips').toggle()", :class=>'function_link',:style=>"font-size: 10px; color:#427F0B"
-      = text_field_tag 'search_command',nil, :size=>30
-      = submit_tag 'GO'
+    .description_box
+      - form_tag user_command_execute_path(User::PUBLIC_USER, 'search_form'), :method=>:get do
+        = link_to_function 'Some Tips', "$('commandline_tips').toggle()", :class=>'function_link',:style=>"font-size: 10px; color:#427F0B"
+        = text_field_tag 'search_command',nil, :size=>30
+        = submit_tag 'GO'
       
-    #commandline_tips{ :style => "padding-left: 20px; padding-top: 10px; display:none" }
-      %ul.normal{ :style => "list-style-type: square" }
-        %li
-          Commands are given in the form [command] [options] [arguments].
-          %br
-          For example, if you want to search google news for facts,
-          %br
-          try
-          = link_to_function("g -type news facts", "$('search_command').value = 'g -type news facts'", :class=>'function_link')
-          or in its aliased form
-          = link_to_function("g -t n facts", "$('search_command').value = 'g -t n facts'", :class=>'function_link') + "."
-        %li
-          You can get help for any command by appending a -h or -help option to it ie
-          = link_to_function("g -h", "$('search_command').value = 'g -h'", :class=>'function_link') + "."
-          %br
-        %li
-          Any public command created by our users can be used from here within 24 hours of its creation. Check out
-          = link_to("our repository of commands", commands_path) + "."
-        %li
-          Bookmarklets cannot be executed from here. You can still try them anonymously by 
-          = link_to('setting up your browser', static_page_path('setup'))
-          to point to 
-          = link_to('our public user', user_home_path(User::PUBLIC_USER))
-          and then
-          installing
-          = link_to("our bookmarklet enabler", static_page_path('tutorial') + '#bookmarklets') + "."
+      #commandline_tips{ :style => "padding-left: 20px; padding-top: 10px; display:none" }
+        %ul.normal{ :style => "list-style-type: square" }
+          %li
+            Commands are given in the form [command] [options] [arguments].
+            %br
+            For example, if you want to search google news for facts,
+            %br
+            try
+            = link_to_function("g -type news facts", "$('search_command').value = 'g -type news facts'", :class=>'function_link')
+            or in its aliased form
+            = link_to_function("g -t n facts", "$('search_command').value = 'g -t n facts'", :class=>'function_link') + "."
+          %li
+            You can get help for any command by appending a -h or -help option to it ie
+            = link_to_function("g -h", "$('search_command').value = 'g -h'", :class=>'function_link') + "."
+            %br
+          %li
+            Any public command created by our users can be used from here within 24 hours of its creation. Check out
+            = link_to("our repository of commands", commands_path) + "."
+          %li
+            Bookmarklets cannot be executed from here. You can still try them anonymously by 
+            = link_to('setting up your browser', static_page_path('setup'))
+            to point to 
+            = link_to('our public user', user_home_path(User::PUBLIC_USER))
+            and then
+            installing
+            = link_to("our bookmarklet enabler", static_page_path('tutorial') + '#bookmarklets') + "."
           
   %h1
     = link_to("Latest User Commands", user_commands_path, :title=>"Commands that users have subscribe to.")
