--- a/app/views/user_commands/index.html.erb
+++ b/app/views/user_commands/index.html.erb
@@ -1,5 +1,6 @@
 <%- title = set_breadcrumb_title; title += " - " + sort_description if params[:sort]; set_header :title=>title -%>
-<% if logged_in? %>
+
+<% if false && logged_in? %>
 	<div style="float: right">
 	<% form_tag search_user_commands_path, :method=>:get  do %>
 	<label for="q">Search your user commands by url or keyword</label>
@@ -8,6 +9,8 @@
 	<% end %>
 	</div>
 <% end %>
+
+
 <h1 class="inline">
 	<% if current_page_matches?(search_user_commands_path) || current_page_matches?(search_all_commands_path) %>
 		Search Results for '<%= params[:q] %>'
@@ -41,14 +44,16 @@
 
 
 <hr />
-<%- headers = ["User Command<br/>#{sort_link_up('name') + sort_link_down('name')}", ['Command', {:width=>150}], 
+<%- headers = [
+  "User Command<br/>#{sort_link_up('name') + sort_link_down('name')}", 
 	["Queries<br/>#{sort_link_up('queries_count') + sort_link_down('queries_count')}", {:width=>30, :class=>'centered'}], 
-	["Keyword<br/>#{sort_link_up('keyword') + sort_link_down('keyword')}", {:width=>70}], 'User',
-	 "Created<br/>#{sort_link_up('created_at') + sort_link_down('created_at')}"]
-  columns = [:name_bolded, :command_bolded, :queries_count, :keyword, :user, :created_at]
+	["Keyword<br/>#{sort_link_up('keyword') + sort_link_down('keyword')}", {:width=>70}],
+	 "Created<br/>#{sort_link_up('created_at') + sort_link_down('created_at')}"
+	]
+  columns = [:name_bolded, :queries_count, :keyword, :created_at]
   if logged_in?
-	headers << 'Options'
-	columns << :command_actions
+	  headers << 'Options'
+	  columns << :command_actions
   end
 -%>
 <%= user_command_table @user_commands, :table=>{:class=>'top_spaced'},:headers=>headers, :columns=>columns %>
