--- a/public/stylesheets/sass/_layout.sass
+++ b/public/stylesheets/sass/_layout.sass
@@ -51,6 +51,15 @@ p
   &.tag_list
     padding: 3px 0
     color: #999
+    font-weight: normal
+    font-size: .9em
+    a
+      font-weight: normal
+      color: #666 !important
+      &:hover
+        text-decoration: underline
+        background: none
+        color: #333 !important
   &.small-url
     padding: 0
     margin: 0
@@ -65,6 +74,9 @@ p
     padding: 0
     a
       text-decoration: none
+      &:hover
+        background: none
+        text-decoration: underline
 
   a
     text-decoration: underline
